# schedule

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: check.yml
app/: config.py  main.py
app/api/: __init__.py  callback_datas.py  filters.py  keyboards.py
app/api/handlers/: group_handelrs.py  schedule_handlers.py  user_handlers.py
app/api/middlewares/: inject_middleware.py  register_middleware.py
app/database/: database.py
app/domain/: constants.py  controllers.py  exceptions.py  schemas.py
app/infrastructure/: di_containers.py  models.py
app/infrastructure/database/: database.py
app/infrastructure/databases/: sql_database.py
app/infrastructure/repositories/: base_repository.py  group_repository.py  lesson_repository.py  user_repository.py
app/injectors/: group_injectors.py  injectors.py  lesson_injectors.py  user_injectors.py
app/scripts/: init_scripts.py
app/services/: group_service.py  lesson_service.py  user_service.py
app/users/: models.py
app/utils/: middlewares.py  routers.py  setup_di_container.py
migrations/: env.py
migrations/versions/: a3f0bbb40c44_alter_group_table_name_not_unique.py  b3efd915baa2_alter_group_id_to_nullable_true.py  dc817d01c714_add_day_for_lesson.py  ee5ddce0a2d3_add_busuiness_models.py  fa15a36d0865_init_tables.py
